# HandWritten-Symbol-Recognition

./: README.md
HSR/HSR/: package-lock.json  package.json
HSR/HSR/src/: App.css  App.js  AppWorking.js  Image_save.css
hsrapi/hsrapi/: api.py  flattened_images.npy  flattened_images_dict.pkl  label.npy  pyproject.toml  requirements.txt  save_from_npy.py
hsrapi/hsrapi/models/: model_20250918164733.pkl
hsrapi/hsrapi/models/archive/: model_20240705141910.pkl  model_20240705143811.pkl  model_20250916152812.pkl
